style-fixes-on-mobile/ fixing background img display bug on mobiles

--- a/style.css
+++ b/style.css
@@ -13,10 +13,23 @@ body {
     font-size: 18px;
     line-height: 1.2;
     width: 100%;
-    background: linear-gradient(rgba(120, 120, 120, 0.4), rgba(0, 0, 0, 0.5)), url("img/taps/tt1.jpg");
-    background-attachment: fixed;
-    background-size: cover;
     overflow-x:hidden;
+}
+
+body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1088888;
+    background: linear-gradient(rgba(120, 120, 120, 0.4), rgba(0, 0, 0, 0.5)), url("img/taps/tt1.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .img-fluid {
